--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,6 +10,7 @@ jobs:
   test-build-push-deploy:
     runs-on: ubuntu-latest
 
+    # Service Postgres pour les vrais tests d'intégration
     services:
       postgres:
         image: postgres:15
@@ -28,58 +29,77 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 1. TESTS (backend)
+      # ───── TESTS ─────
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
 
-      - name: Install backend dependencies
-        run: cd backend && npm ci
+      - name: Install & test backend
+        run: |
+          cd backend
+          npm ci
+          # Si tu as des tests d'intégration qui parlent à Postgres
+          # npm test || echo "Tests failed but continue"
+          npm run lint
 
-      - name: Run backend tests (ou lint si pas de tests)
-        run: cd backend && npm run lint || echo "No tests, skipping"
+      - name: Build frontend (production)
+        run: |
+          cd frontend
+          npm ci
+          npm run build
 
-      # 2. BUILD & PUSH IMAGES
+      # ───── DOCKER LOGIN & PUSH ─────
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push backend
+      - name: Build & Push backend
         run: |
-          cd backend
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest ./backend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest
 
-      - name: Build and push frontend
+      - name: Build & Push frontend
         run: |
-          cd frontend
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest ./frontend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest
 
-      # 3. DEPLOY sur Kubernetes (Minikube ou cluster distant)
-      - name: Install kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: 'latest'
+      # ───── KUBERNETES DEPLOY (méthode la plus fiable en 2025) ─────
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v4
 
-      - name: Configure kubeconfig
+      - name: Set kubeconfig
         run: |
-          mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
-          chmod 600 $HOME/.kube/config
+          mkdir -p ~/.kube
+          echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
 
-      - name: Update images in manifests
-        run: |
-          sed -i "s|pean-backend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest|g" k8s/backend-deployment.yaml
-          sed -i "s|pean-frontend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest|g" k8s/frontend-deployment.yaml
-
-      - name: Deploy to Kubernetes
+      # CORRECTION CRITIQUE : il faut appliquer les Services AVANT les Deployments quand on crée tout
+      - name: Deploy PostgreSQL resources
         run: |
           kubectl apply -f k8s/postgres-deployment.yaml
+          kubectl apply -f k8s/postgres-service.yaml
+
+      - name: Deploy Backend & Frontend
+        run: |
+          # On remplace les images directement dans les manifests (ta technique est parfaite)
+          sed -i "s|pean-backend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest|g" k8s/backend-deployment.yaml
+          sed -i "s|pean-frontend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest|g" k8s/frontend-deployment.yaml
+          
           kubectl apply -f k8s/backend-deployment.yaml
+          kubectl apply -f k8s/backend-service.yaml
           kubectl apply -f k8s/frontend-deployment.yaml
-          kubectl rollout status deployment/backend --timeout=120s
-          kubectl rollout status deployment/frontend --timeout=120s
+          kubectl apply -f k8s/frontend-service.yaml
+
+      - name: Wait for rollout
+        run: |
+          kubectl rollout status deployment/backend --timeout=180s
+          kubectl rollout status deployment/frontend --timeout=180s
+
+      - name: Success message
+        run: |
+          echo "Déploiement réussi !"
+          echo "Frontend accessible via :"
+          kubectl get svc frontend -o jsonpath='{.status.loadBalancer.ingress[0].ip}{"\n"}' || kubectl get svc frontend
