--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,90 +1,77 @@
-name: CI/CD Pipeline - PEAN Stack
+name: CI/CD with Kind (Kubernetes in Docker)
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  test-build-push-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
-    # Service Postgres pour les vrais tests d'intégration
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_DB: peandb
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: 123
-        ports: [5432:5432]
-        options: >-
-          --health-cmd="pg_isready -U postgres"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # ───── TESTS ─────
+      # ───── Node.js setup ─────
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
 
-      - name: Install & test backend
-        run: |
-          cd backend
-          npm ci
-          echo "Linting skipped (no eslint configured yet)"
+      - name: Install backend
+        run: cd backend && npm ci
 
-      - name: Build frontend (production)
-        run: |
-          cd frontend
-          npm ci
-          npm run build
+      - name: Build frontend
+        run: cd frontend && npm ci && npm run build
 
-      # ───── DOCKER LOGIN & PUSH ─────
+      # ───── Docker login ─────
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build & Push backend
+      # ───── Build & push images ─────
+      - name: Build & push backend
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest ./backend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest
 
-      - name: Build & Push frontend
+      - name: Build & push frontend
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest ./frontend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest
 
-      # ───── KUBERNETES DEPLOY (méthode la plus fiable en 2025) ─────
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v4
-
-      - name: Set kubeconfig
+      # ───── Setup Kind (Kubernetes in Docker) ─────
+      - name: Install Kind
         run: |
-          mkdir -p ~/.kube
-          echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
+          curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.24.0/kind-linux-amd64
+          chmod +x ./kind
+          sudo mv ./kind /usr/local/bin/kind
+          kind version
 
-      # CORRECTION CRITIQUE : il faut appliquer les Services AVANT les Deployments quand on crée tout
-      - name: Deploy PostgreSQL resources
+      - name: Create Kind cluster
         run: |
-          kubectl apply -f k8s/postgres-deployment.yaml --validate=false
-          kubectl apply -f k8s/postgres-service.yaml --validate=false
+          kind create cluster --name kind --wait 5m
+
+      # ───── Load images into Kind (pour éviter de re-pull) ─────
+      - name: Load images into Kind
+        run: |
+          kind load docker-image ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest
+          kind load docker-image ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest
+
+      # ───── Patch manifests avec ton pseudo ─────
+      - name: Update manifests
+        run: |
+          sed -i "s|pean-backend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest|g" k8s/backend-deployment.yaml
+          sed -i "s|pean-frontend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest|g" k8s/frontend-deployment.yaml
+
+      # ───── Deploy tout ─────
+      - name: Deploy PostgreSQL
+        run: kubectl apply -f k8s/postgres-deployment.yaml && kubectl apply -f k8s/postgres-service.yaml
 
       - name: Deploy Backend & Frontend
         run: |
-          # On remplace les images directement dans les manifests (ta technique est parfaite)
-          sed -i "s|pean-backend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest|g" k8s/backend-deployment.yaml
-          sed -i "s|pean-frontend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest|g" k8s/frontend-deployment.yaml
-          
           kubectl apply -f k8s/backend-deployment.yaml
           kubectl apply -f k8s/backend-service.yaml
           kubectl apply -f k8s/frontend-deployment.yaml
@@ -95,8 +82,8 @@ jobs:
           kubectl rollout status deployment/backend --timeout=180s
           kubectl rollout status deployment/frontend --timeout=180s
 
-      - name: Success message
+      - name: Success
         run: |
-          echo "Déploiement réussi !"
-          echo "Frontend accessible via :"
-          kubectl get svc frontend -o jsonpath='{.status.loadBalancer.ingress[0].ip}{"\n"}' || kubectl get svc frontend
+          echo "DÉPLOIEMENT RÉUSSI SUR KIND !"
+          kubectl get pods -A
+          kubectl get svc
