--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -77,10 +77,25 @@ jobs:
           kubectl apply -f k8s/frontend-deployment.yaml
           kubectl apply -f k8s/frontend-service.yaml
 
+
+      - name: Debug pods
+        if: failure()
+        run: |
+          echo "=== Pods status ==="
+          kubectl get pods -o wide
+
+          echo "=== Describe backend ==="
+          kubectl describe pod -l app=backend
+
+          echo "=== Backend logs ==="
+          kubectl logs -l app=backend --tail=50
+
+
+
       - name: Wait for rollout
         run: |
-          kubectl rollout status deployment/backend --timeout=180s
-          kubectl rollout status deployment/frontend --timeout=180s
+          kubectl rollout status deployment/backend --timeout=300s
+          kubectl rollout status deployment/frontend --timeout=300s
 
       - name: Success
         run: |
