--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -14,20 +14,20 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: monem3/frontend:latest
+          image: monem3/pean-frontend:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 80
---- 
+
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend
 spec:
   type: NodePort
+  selector:
+    app: frontend
   ports:
     - port: 80
       targetPort: 80
-      nodePort: 30000   # Accès via http://localhost:30000
-  selector:
-    app: frontend
