--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,7 +12,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # ───── Node.js setup ─────
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -24,14 +23,12 @@ jobs:
       - name: Build frontend
         run: cd frontend && npm ci && npm run build
 
-      # ───── Docker login ─────
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # ───── Build & push images ─────
       - name: Build & push backend
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest ./backend
@@ -42,7 +39,6 @@ jobs:
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest ./frontend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest
 
-      # ───── Setup Kind (Kubernetes in Docker) ─────
       - name: Install Kind
         run: |
           curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.24.0/kind-linux-amd64
@@ -51,22 +47,18 @@ jobs:
           kind version
 
       - name: Create Kind cluster
-        run: |
-          kind create cluster --name kind --wait 5m
+        run: kind create cluster --name kind --wait 5m
 
-      # ───── Load images into Kind (pour éviter de re-pull) ─────
       - name: Load images into Kind
         run: |
           kind load docker-image ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest
           kind load docker-image ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest
 
-      # ───── Patch manifests avec ton pseudo ─────
       - name: Update manifests
         run: |
           sed -i "s|pean-backend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest|g" k8s/backend-deployment.yaml
           sed -i "s|pean-frontend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest|g" k8s/frontend-deployment.yaml
 
-      # ───── Deploy tout ─────
       - name: Deploy PostgreSQL
         run: kubectl apply -f k8s/postgres-deployment.yaml && kubectl apply -f k8s/postgres-service.yaml
 
@@ -77,28 +69,31 @@ jobs:
           kubectl apply -f k8s/frontend-deployment.yaml
           kubectl apply -f k8s/frontend-service.yaml
 
-
-      - name: Debug pods
-        if: failure()
+      # ✅ DEBUG AVANT LA VÉRIF DU ROLLOUT
+      - name: Debug before rollout
         run: |
-          echo "=== Pods status ==="
+          echo "===== PODS ====="
           kubectl get pods -o wide
-
-          echo "=== Describe backend ==="
+          echo "===== DESCRIBE BACKEND ====="
           kubectl describe pod -l app=backend
+          echo "===== BACKEND LOGS ====="
+          kubectl logs -l app=backend --tail=100
 
-          echo "=== Backend logs ==="
-          kubectl logs -l app=backend --tail=50
-
-
-
+      # ✅ ATTENTE AVEC TIMEOUT + DEBUG SI ECHEC
       - name: Wait for rollout
         run: |
-          kubectl rollout status deployment/backend --timeout=300s
-          kubectl rollout status deployment/frontend --timeout=300s
+          kubectl rollout status deployment/backend --timeout=300s || true
+          kubectl rollout status deployment/frontend --timeout=300s || true
+
+      - name: Final debug
+        if: always()
+        run: |
+          echo "===== FINAL POD STATUS ====="
+          kubectl get pods -o wide
+          echo "===== FINAL BACKEND LOGS ====="
+          kubectl logs -l app=backend --tail=100 || true
 
       - name: Success
         run: |
-          echo "DÉPLOIEMENT RÉUSSI SUR KIND !"
-          kubectl get pods -A
+          echo "DÉPLOIEMENT TERMINÉ"
           kubectl get svc
