--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
         - name: backend
           image: monem3/pean-backend:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Never
           ports:
             - containerPort: 3000
           env:
