--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,14 +51,13 @@ jobs:
 
       - name: Load images into Kind
         run: |
-          kind load docker-image ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest
-          kind load docker-image ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest pean-backend:latest
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest pean-frontend:latest
 
-      - name: Update manifests
-        run: |
-          sed -i "s|pean-backend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-backend:latest|g" k8s/backend-deployment.yaml
-          sed -i "s|pean-frontend:latest|${{ secrets.DOCKERHUB_USERNAME }}/pean-frontend:latest|g" k8s/frontend-deployment.yaml
+          kind load docker-image pean-backend:latest
+          kind load docker-image pean-frontend:latest
 
+      
       - name: Deploy PostgreSQL
         run: kubectl apply -f k8s/postgres-deployment.yaml && kubectl apply -f k8s/postgres-service.yaml
 
@@ -82,7 +81,7 @@ jobs:
       - name: Wait for PostgreSQL
         run: |
           kubectl rollout status deployment/postgres --timeout=180s
-          
+
         # ✅ ATTENTE AVEC TIMEOUT + DEBUG SI ECHEC
       - name: Wait for rollout
         run: |
