--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: monem3/pean-backend:latest
+          image: pean-backend:latest
           imagePullPolicy: Never
           ports:
             - containerPort: 3000
