configuration du name web-app

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy Backend to Azure Web App
         run: |
           az webapp deploy --resource-group myapp-angular_group-b390 \
-            --name myapp-backend \
+            --name MP2LBackInstance \
             --src-path ./backend
 
       # ---------------- Frontend ----------------
@@ -41,5 +41,5 @@ jobs:
       - name: Deploy Frontend to Azure Web App
         run: |
           az webapp deploy --resource-group myapp-angular_group-b390 \
-            --name myapp-frontend \
+            --name myapp-angular-frontend \
             --src-path ./frontend/dist/frontend
