--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ Login Azure avec Service Principal
+      # 2️⃣ Login Azure via Service Principal
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}  # JSON complet du SP
 
       # ---------------- Backend ----------------
       - name: Install backend dependencies
