--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -35,8 +35,10 @@ jobs:
           npm run build
 
       - name: Deploy Frontend
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: myapp-angular-frontend
-          package: ./frontend/dist/frontend
-          type: static
+        run: |
+          cd frontend/dist/frontend
+          zip -r frontend.zip .
+          az webapp deploy --resource-group MP2L \
+            --name myapp-angular-frontend \
+            --src-path ./frontend.zip \
+            --type zip
