--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -94,6 +94,7 @@ jobs:
     needs:
       - build-and-push-frontend
       - build-and-push-backend
+    if: always()
     steps:
       - uses: actions/checkout@v4
 
