--- a/k8s/monitoring-lab/prometheus.yml
+++ b/k8s/monitoring-lab/prometheus.yml
@@ -1,17 +1,14 @@
 global:
-  scrape_interval: 5s
-  
-rule_files:
-  - "alert.rules.yml"
+  scrape_interval: 15s     # 15s est la valeur standard (5s est trop agressif)
+  evaluation_interval: 15s
 
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['prometheus:9090']
+      - targets: ['localhost:9090']
 
-  - job_name: 'demo-app'
+  - job_name: 'cadvisor'
     static_configs:
-      - targets: ['demo-app:80']
-  - job_name: 'node'
-    static_configs:
-      - targets: ['host.docker.internal:9100']
+      - targets: ['cadvisor:8080']    # Nom du service Docker, port interne
+
+  # Vous pouvez supprimer ou commenter le job demo-app s'il est encore là
